1. fix css id name 2. Add population on trend plot legend

--- a/src/style.css
+++ b/src/style.css
@@ -107,7 +107,7 @@ g {
     font-weight:bolder;
 }
 
-#childcare-dessert-intro{
+#childcare-Desert-intro{
     display: block;
     margin: 0 auto;
     text-align: center;
@@ -234,7 +234,7 @@ line{
     width: 100%;
     height: auto;
 }
-#childcare-dessert-intro {
+#childcare-Desert-intro {
     font-style: italic;
     display: block;
     margin-bottom: 15px;
